feat: added full size chip option on autocomplete dropdown

--- a/src/components/DropdownInput/index.css
+++ b/src/components/DropdownInput/index.css
@@ -145,6 +145,10 @@
     @apply mb-2 mr-2 pui-text-ellipsis;
 
     max-width: 220px;
+
+    &.fullSize {
+      max-width: none;
+    }
   }
 
   /* The styling for a single selected option */
