--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,7 +1,7 @@
 /* https://twitter.com/leeerob/status/1345554815158546432 */
 @font-face {
   font-family: 'Ilisarniq GTG';
-  src: url('/fonts/Ilisarniq-Bold.woff2') format('woff2'), url('/fonts/Ilisarniq-Bold.woff') format('woff');
+  src: url('../../public/fonts/Ilisarniq-Bold.woff2') format('woff2'), url('../../public/fonts/Ilisarniq-Bold.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: optional;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Ilisarniq GTG';
-  src: url('/fonts/Ilisarniq-Demi.woff2') format('woff2'), url('/fonts/Ilisarniq-Demi.woff') format('woff');
+  src: url('../../public/fonts/Ilisarniq-Demi.woff2') format('woff2'), url('../../public/fonts/Ilisarniq-Demi.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: optional;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: 'Ilisarniq GTG';
-  src: url('/fonts/Ilisarniq-Regular.woff2') format('woff2'), url('/fonts/Ilisarniq-Regular.woff') format('woff');
+  src: url('../../public/fonts/Ilisarniq-Regular.woff2') format('woff2'), url('../../public/fonts/Ilisarniq-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: optional;
@@ -25,7 +25,7 @@
 
 @font-face {
   font-family: 'Ilisarniq GTG';
-  src: url('/fonts/Ilisarniq-Light.woff2') format('woff2'), url('/fonts/Ilisarniq-Light.woff') format('woff');
+  src: url('../../public/fonts/Ilisarniq-Light.woff2') format('woff2'), url('../../public/fonts/Ilisarniq-Light.woff') format('woff');
   font-weight: 100;
   font-style: normal;
   font-display: optional;
